--- a/templates/fetch.html
+++ b/templates/fetch.html
@@ -1,6 +1,11 @@
 {# This software is in the public domain. Where that dedication is not
    recognized, you are granted a perpetual, irrevocable license to copy,
    distribute, and modify this file as you see fit. #}
+<!-- If you want to use this information to create your own app or service,
+     please, don't use this site as an API.
+     It runs on the free tier of Google App Engine, and the quotas are very
+     limited. The source code is available and easy to read and port, use
+     that instead. Thanks. -->
 <ul>
     <li>App name: {{data.name}}
     <li>Current version: {{data.version}}
