--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <p class="intro">
-            Enter the URL of any app on the Windows Store.<br>
+            Enter the URL of any app on the Windows Store to know when it was last updated.<br>
             Example: <em>https://www.microsoft.com/en-us/store/apps/instagram-beta/9wzdncrfhw8m</em>
         </p>
         <form>
