--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,15 @@
             p.intro em { cursor: pointer; }
         </style>
         <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
+        <link rel="shortcut icon" type="image/gif" href="data:image/gif;base64,
+            R0lGODlhEAAQAKU8AAAAAAAAOUIAAAAgISEgACEgIUIgADEwMQBBQlIwMSFBISFBQjk8OUJBAHMw
+            MUJBQmNBAJQwMQBdWjFRUgBhY1JRMVJRUjldWnNRMVpdOVpdWpRRMTFta2NhYwB9ezFxcwCChGtt
+            a6VhY3Nxc5RxMTGOjACenHt9e3t9vaWCY2OenJSSlDGurWOipZyenKWipa2urbWytb2+nL2+vb2+
+            3sbDxmPf3s7Pzt7fvd7f3nv//+/v7////////////////yH5BAEKAD8ALAAAAAAQABAAAAa+QJAQ
+            REkkDA0EAoSgDIkCB0YkInU0B6JTmIhsLEZSpZNlChFUUmiX6xBqBecSlKBiXDgYOxcbURASdCIb
+            GTwVKyc8PDA1IwA2ggkyMzkoNIptNQ8lTCkNhx1rOTyZHRxCCgoUATSJFRCaHTWnTwgXNwcYHSsP
+            uyVKJycTFH8HBx0LHQ8TLQAMBQwdA39CAxwfAyYsAy4XGi8PS0ocNqaQxCE5mmYINjYqKiZPBw8L
+            4uQ2HvJPHDrsLBwm7AMRBAA7">
     </head>
     <body>
         <p class="intro">
@@ -18,7 +27,7 @@
             Example: <em>https://www.microsoft.com/en-us/store/apps/instagram-beta/9wzdncrfhw8m</em>
         </p>
         <form>
-            <input type="text" placeholder="" name="url">
+            <input type="text" name="url">
             <input type="submit">
         </form>
         <p id="status"></p>
