update to support the windows 10 store

--- a/templates/fetch.html
+++ b/templates/fetch.html
@@ -7,12 +7,7 @@
      limited. The source code is available and easy to read and port, use
      that instead. Thanks. -->
 <ul>
-    <li>App name: {{data.name}}
-    <li>Current version: {{data.version}}
-    <li>Last updated on: {{data.last_updated}}
-    <li>First published on: {{data.release_date}}
-    <li>
-        <a href="{{data.download_link|safe}}">
-            Download {{data.package_format}} ({{data.package_size}} MB)
-        </a>
+    <li><strong>App name:</strong> {{data.name}}</li>
+    <li><strong>First published on:</strong> {{data.release_date}}</li>
+    <li><strong>Last updated on:</strong> {{data.last_updated}}</li>
 </ul>
