--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,11 @@
         <meta charset="utf-8">
         <title>WP Snitch</title>
         <style>
+            body { font-family: sans-serif; }
             input[type=text] { width: 300px; }
             p.intro em { cursor: pointer; }
         </style>
-        <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="shortcut icon" type="image/gif" href="data:image/gif;base64,
             R0lGODlhEAAQAKU8AAAAAAAAOUIAAAAgISEgACEgIUIgADEwMQBBQlIwMSFBISFBQjk8OUJBAHMw
             MUJBQmNBAJQwMQBdWjFRUgBhY1JRMVJRUjldWnNRMVpdOVpdWpRRMTFta2NhYwB9ezFxcwCChGtt
@@ -23,8 +24,8 @@
     </head>
     <body>
         <p class="intro">
-            Enter the URL of any app on the Windows Store to know when it was last updated.<br>
-            Example: <em>https://www.microsoft.com/en-us/store/apps/instagram-beta/9wzdncrfhw8m</em>
+            <strong>Enter the URL of any app on the Windows Store to know when it was last updated.</strong><br>
+            Example: <em>https://www.microsoft.com/en-us/store/p/instagram/9nblggh5l9xt</em>
         </p>
         <form>
             <input type="text" name="url">
