--- a/templates/index.html
+++ b/templates/index.html
@@ -38,37 +38,6 @@
             <a href="https://gitlab.com/subversion/wpsnitch">Source code</a>
         </p>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <script>
-            var $ = "_";
-            jQuery("p.intro em").on("click", function(e) {
-                e.preventDefault();
-
-                jQuery("form input[name=url]").val(jQuery(this).html());
-                jQuery("form").submit();
-            });
-
-            jQuery("form").on("submit", function(e) {
-                e.preventDefault();
-
-                jQuery("#status").html("Wait...");
-                jQuery("form input[type=submit]").attr("disabled", "disabled");
-
-                jQuery.ajax({
-                    type: "POST",
-                    url: "/fetch",
-                    data: jQuery(this).serialize(),
-                    dataType: "json",
-                    success: function(data) {
-                        jQuery("#status").html(data.output);
-                        jQuery("form input[type=submit]").removeAttr("disabled");
-                    },
-                    error: function(data) {
-                        jQuery("#status").html("oh lad, something went wrong");
-                        jQuery("form input[type=submit]").removeAttr("disabled");
-                    },
-                });
-            });
-        </script>
+        <script src="/static/script.js"></script>
     </body>
 </html>
